feat: Integrate Firebase and enhance UI components
This commit introduces Firebase integration for potential future features and significantly improves the user interface across several components.

Key changes include:
- Adding Firebase SDKs for app, auth, and firestore to `index.html`.
- Modifying `GeminiService` to include a fallback for API key initialization and handle potential missing keys gracefully.
- Enhancing the `HeroComponent` with parallax scrolling effects for the background image/video and a more visually appealing layout.
- Updating the `MenuComponent` with refined typography, spacing, and a more polished tab design for branches.
- Revamping the `GalleryComponent` to mimic an Instagram-like grid layout with improved styling and direct links to the Instagram profile.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
     "@angular/core": "https://esm.sh/@angular/core@^21.0.6?external=rxjs",
     "@angular/forms": "https://esm.sh/@angular/forms@^21.0.6?external=rxjs",
     "@angular/platform-browser": "https://esm.sh/@angular/platform-browser@^21.0.6?external=rxjs",
-    "@angular/router": "https://esm.sh/@angular/router@^21.0.6?external=rxjs"
+    "@angular/router": "https://esm.sh/@angular/router@^21.0.6?external=rxjs",
+    "firebase/app": "https://esm.sh/firebase@^12.7.0/app?external=rxjs",
+    "firebase/auth": "https://esm.sh/firebase@^12.7.0/auth?external=rxjs",
+    "firebase/firestore": "https://esm.sh/firebase@^12.7.0/firestore?external=rxjs",
+    "firebase/storage": "https://esm.sh/firebase@^12.7.0/storage?external=rxjs"
   }
 }
 </script>
