--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id" class="scroll-smooth">
 <head>
@@ -94,6 +93,7 @@
     "@angular/router": "https://esm.sh/@angular/router@^21.0.6?external=rxjs",
     "firebase/app": "https://esm.sh/firebase@^12.7.0/app?external=rxjs",
     "firebase/auth": "https://esm.sh/firebase@^12.7.0/auth?external=rxjs",
+    "firebase/app-check": "https://esm.sh/firebase@^12.7.0/app-check?external=rxjs",
     "firebase/firestore": "https://esm.sh/firebase@^12.7.0/firestore?external=rxjs",
     "firebase/storage": "https://esm.sh/firebase@^12.7.0/storage?external=rxjs"
   }
